refactor : Branch, Purpose 를 Entity 로 변경